# ButtonAssist

./: .gitignore  AssetUtil.ahk  ButtonAssist.ahk  DISCLAIMER.md  DataClass.Ahk  HotKeyUtil.ahk  Index.html  README.en.md  README.md  RMT.ahk  TimerUtil.ahk  UIUtil.ahk  _config.yml  index.html  settings.ini
.github/: _config.yml
Gui/: BGMouseGui.ahk  CommandIntervalGui.ahk  CompareGui.ahk  CoordGui.ahk  EditHotkeyGui.ahk  FileGui.ahk  FindColorGui.ahk  ImageSearchGui.ahk  InputGui.ahk  IntervalGui.ahk  KeyGui.ahk  MacroEditGui.ahk  MacroGui.ahk  MouseMoveGui.ahk  OperationGui.ahk  OperationSubGui.ahk  OutputGui.ahk  ReplaceKeyGui.ahk  ScrollBar.ahk  SearchGui.ahk  SearchProGui.ahk  StopGui.ahk  SubMacroGui.ahk  TriggerKeyGui.ahk  TriggerStrGui.ahk  VariableGui.ahk
Joy/: JoyMacro.ahk  SuperCvJoyInterface.ahk
Joy/XOutput/: settings.json
Main/: AssetUtil.ahk  CompareUtil.ahk  DataClass.Ahk  HotKeyUtil.ahk  JsonUtil.ahk  RMTUtil.ahk  RecordJoyUtil.ahk  UIUtil.ahk  WorkPool.ahk
OpenCV/: CMakeLists.txt  ImageFinder.cpp  README.md
OpenCV/ahk_demo/: test.ahk
OpenCV/cpp_demo/: CMakeLists.txt  main.cpp
Plugins/: Thread.ahk
Plugins/OpenCV/: .clang-format  ImageFinder.h
RapidOcr/: RapidOcr.ahk
Setting/: BGMouseFile.ini  InputFile.ini  MainSettings.ini  OperationFile.ini  OutputFile.ini  SearchFile.ini  SearchProFile.ini  StopFile.ini  SubMacroFile.ini  VariableFile.ini
Thread/: Work.ahk  WorkUtil.ahk
VBS/: PlayAudio.vbs
Web/: 常见问题.md  开发指南.md  快速上手.md  手柄功能指南.md  更新日志.md  环境配置（手柄）.md  词条介绍.md  问题及应对措施.md
XOutput/: settings.json
(+2 files in other folders)
